methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: Unit does not take parameters
	    growFlowers();
                       ^FlowerPot:24: error: not found: value leveBross
  leveBross()
  ^FlowerPot:30: error: not found: value SetCouleurBrosse
  SetCouleurBrosse(c)
  ^